--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,3 +1,5 @@
+<ng-template appPlaceholder></ng-template>
+
 <div class="row">
     <div class="col-xs-12">
         <!-- <div class="alert alert-danger" *ngIf="error">
